--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-## CLI COVID19 INFORMATION DISPLAYER
+## CLI COVID19 INFORMATION DISPLAYER   (under maintenance)
 
 This python script display world COVID19 information beside of specified country
 Script ask for country name, you can use country name or country code for getting the information
